# stub

./: pyproject.toml
tests/: test_basic.py
