[tool.poetry]
name = "automation"
version = "0.1.0"
description = ""
authors = ["Victor Ras <4612vr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.8.0"
flake8 = "^5.0.4"
pytest = "^7.1.3"
selenium = "^4.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
